# func-analysis

./: .gitignore  .gitlab-ci.yml  .pylintrc  .snekrc  CHANGELOG.md  CHANGELOG.rst  LICENSE  README.md  README.rst  environment.yml  func-analysis.py  func_analysis.py  lgtm.yml  numpy-stubs  pylintrc  pyproject.toml  setup.cfg  setup.py  test_all_analysis.py  test_func_analysis.py
.vim/: coc-settings.json
func_analysis/: __init__.py  _analysis_classes.py  _decorators.py  _util.py  af_util.py  analysis_classes.py  custom_types.py  decorators.py  func_analysis.py  interval_util.py  util.py
func_analysis/analyzed_func/: __init__.py  af_base.py  af_crits_pois.py  af_intervals_extrema.py  af_symmetry.py  af_zcp.py  af_zeros.py  analyzed_func.py
func_analysis/tests/: __init__.py  call_counting.py  conftest.py  constants.py  funcs_to_analyze.py  helpers.py  test_all_analysis.py  test_area.py  test_call_counts.py  test_crits.py  test_crits_pois.py  test_extrema.py  test_interval_util.py  test_intervals.py  test_no_points_wanted.py  test_other_analysis.py  test_pois.py  test_util.py  test_zeros.py  test_zeros_crits_pois.py  testing_utils.py  typechecking.py
tests/: test_all_analysis.py
