[build-system]
requires = ['setuptools>=38.6.0', 'wheel>0.31.0']

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py37

[testenv]
whitelist_externals =
	sh
	rm
commands =
	python3 setup.py test

[testenv:format]
basepython = python3
skip_install = true
deps =
	black
	isort
commands =
	sh -c "isort *.py func_analysis/*.py func_analysis/tests/*.py"
	sh -c "black --py36 -l 79 *.py func_analysis/*.py func_analysis/*/*.py"

# Linters

[testenv:flake8]
basepython = python3
skip_install = true
deps =
	flake8
	pep8-naming
	flake8-bandit
	flake8-blind-except
	flake8-builtins
	flake8-comprehensions
	flake8-deprecated
	flake8-eradicate
	flake8-isort
	flake8-mutable
	flake8-pep3101
	flake8-polyfill
	flake8-pytest
	flake8-self
	flake8-super-call
	flake8-tidy-imports
	flake8-tuple
commands =
	sh -c "flake8 *.py */*.py"

[testenv:pylint]
basepython = python3
skip_install = true
deps = pylint
commands =
	sh -c "pylint -s n *.py */*.py"

[testenv:pydocstyle]
basepython = python3
skip_install = true
deps = pydocstyle
commands = pydocstyle

[testenv:mypy]
basepython = python3
skip_install = true
deps = mypy
commands =
	mypy .

[testenv:pyroma]
basepython = python3
skip_install = true
deps = pyroma
commands =
	pyroma -n 10 .

[testenv:build]
basepython = python3
skip_install = true
deps =
	wheel
	setuptools
commands =
	python setup.py sdist bdist_wheel

"""

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=79
known_future_library="annotations"


[tool.black]
line-length = 79
py36 = true
quiet = true
